--- a/E-Commerce.API/E-Commerce.Services/E-Commerce.Services.csproj
+++ b/E-Commerce.API/E-Commerce.Services/E-Commerce.Services.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="MediatR" Version="12.4.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.29" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	  <PackageReference Include="Stripe.net" Version="44.4.0" />
